# TMLS_Operational_AI_Workshop

./: README.md
data/: micro_consumer_complaints.csv
extensions/distilbert/: extension.yaml  pyproject.toml
extensions/distilbert/distilbert/: algorithm.py
models/: product_classification.yaml
sql/: ddl.sql  snowsql_staging.sql
