[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "distilbert"
version = "0.1.0"
description = ""
authors = [ "b-mckenna <brendanmckenna4@gmail.com>",]
readme = "README.md"
include = [ "*.yaml",]

[tool.poetry.dependencies]
python = "^3.8.13"
keras = "2.9.0"
transformers = "4.21.1"
tokenizers = "0.12.1"
tensorflow = "2.9.1"
datasets = "2.4.0"
pyarrow = "6.0.1"
lime = "0.2.0.1"
